# agentos

./: .clangd  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  DESIGN.md  EXTERNAL_CONTRIBUTOR_TEST.md  LICENSE  Makefile  PLAN.md  README.md  config.yaml  microkit-sdk-2.1.0
.beads/: issues.jsonl  metadata.json
.cargo/: config.toml
.github/workflows/: ci.yml
agents/bench/: main.c
agents/example-rust-pd/: Cargo.toml
agents/example-rust-pd/src/: main.rs
agents/hello/: main.c
agents/init/: main.c
agents/self-modify/: vibe_agent.c
boards/intel-nuc/: agentos.system  board.mk  flash-usb.sh
boards/qemu-aarch64/: board.mk
boards/qemu-riscv64/: board.mk
boards/qemu-x86_64/: board.mk
boards/rpi5/: agentos.system  board.mk  flash-sd.sh
console/: API_CONTRACT.md  agentos-attach  agentos_console.mjs  dashboard.html  index.html  package-lock.json  package.json
console/agentos-console/: Cargo.toml
console/agentos-console/src/: bridge.rs  freebsd.rs  linux_vm.rs  main.rs  profiler.rs  routes.rs  serial.rs  ws_log.rs  ws_terminal.rs  ws_vm_serial.rs
console/dashboard/: Cargo.toml  Trunk.toml  index.html  style.css
console/dashboard/src/: docs.rs  images.rs  lib.rs  topology.rs  vm_panel.rs  xterm_bindings.rs
console/pd-slots/: Cargo.toml
console/test/: api.test.mjs
contracts/: README.md
contracts/agentfs/: README.md  interface.h
contracts/block-service/: README.md  interface.h
contracts/cap-audit/: interface.h
contracts/cap-broker/: README.md  interface.h
contracts/capstore/: README.md  interface.h
contracts/console-mux/: README.md  interface.h
contracts/entropy-service/: README.md  interface.h
contracts/event-bus/: README.md  interface.h
contracts/logsvc/: README.md  interface.h
contracts/memfs/: README.md  interface.h
contracts/modelsvc/: README.md  interface.h
contracts/msgbus/: README.md  interface.h
contracts/nameserver/: README.md  interface.h
contracts/net-server/: README.md  interface.h
contracts/net-service/: README.md  interface.h
contracts/sel4-ipc/: README.md  interface.h
contracts/serial-mux/: README.md  interface.h
contracts/system-desc/: README.md
contracts/timer-service/: README.md  interface.h
contracts/toolsvc/: README.md  interface.h
contracts/usb-service/: README.md  interface.h
contracts/vibe-engine/: README.md  interface.h
contracts/vibeos/: README.md  interface.h
design-md/ollama/: DESIGN.md
docs/: ARCHITECTURE.md  PRIORITY_INHERITANCE.md  REFACTORING_PLAN.md  VIBEOS_ANALYSIS.md  api-surface-audit.md  boot-guide.md  cc-consumer-pattern.md  consolidation-plan.md  device-audit.md  freebsd-vm-guest.md  libvmm-migration-inventory.md  os-review.md  p0-guest-e2e-tasks.md  sel4-loader-format.md  ui-audit.md
docs/defects/: DEFECT-001-gpu-shmem.md  DEFECT-002-js-runtime-removal.md
docs/user-guide/: architecture.md
examples/health-monitor/: Cargo.toml
examples/log-aggregator/: Cargo.toml
guest-images/: .gitignore
kernel/agentos-root-task/: Makefile  agentos-aarch64.system  agentos-x86_64.system  agentos.system  agentos.toml  freebsd-edk2.dts  freebsd_vmm.ld  freebsd_vmm_test.system  linux_vmm_test.system  policy.txt  vmm.mk  vmm_wrapper_template.mk
kernel/freebsd-vmm/: Makefile  freebsd-vmm.dts  vmm.c  vmm.h  vmm_mux.c  vmm_mux.h
kernel/loader/: Makefile  agentos_img.h  elf.h  loader.ld  main.c  mmu.S  start.S
libs/libagent/: libagent.c
libs/libraft/: mesh_raft.c  raft.c  raft.h
libs/rust-pd/: Cargo.toml
libs/rust-pd/src/: console.rs  ffi.rs  ipc.rs  lib.rs  pd.rs
manifests/: agentos-freebsd.system  agentos-linux-x86.system  hello-agent.toml  vibe-agent.toml
rcc/: agentos_console.mjs  dashboard.html  package.json
scripts/: boot-test.sh  ci-test.sh  fetch-freebsd-guest.sh  fetch-ubuntu-guest.sh  release.sh  run-fault-inject-tests.sh  run-tests.sh  setup-dev.sh  setup-sdk.sh
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/agentos_sdk/: __init__.py  context.py  eventbus.py  shim.py  tools.py
sdk/python/examples/: langchain_agent.py  simple_agent.py
test/: echo_service.wasm  echo_service.wat  make_swap_image.py  test_cap_policy_hotreload.c  test_cap_policy_reload.c  test_dev_shell.c  test_power_mgr.c  test_snapshot_sched.c
tests/: end_to_end_boot_test.sh  microkit.h  rust_pd_unit_test.rs  test_cap_policy_hotreload.c  test_cap_policy_ring0_registry.c  test_cap_policy_ring1.c  test_cc_contract.c  test_dev_shell.c  test_e13_agent_boot.c  test_framebuffer_contract.c  test_framebuffer_pd.c  test_guest_contract.c  test_power_mgr.c  test_proc_server.c  test_quota.c  test_serial_pd.c  test_snapshot_sched.c  test_vibeos_lifecycle.c  test_vm_multi_guest.c  vibe_integration_test.sh
tools/: attest_verify.py  bootstrap-guest.sh  extract_freebsd_file.py  gen_ringbuf.py  gen_sdf.py  perf_ring_schema.yaml  sign_wasm.py  test_attest_verify.py  test_gen_sdf.py  topology.yaml  trace_replay.mjs
tools/attest-verify/: Cargo.toml
tools/attest-verify/src/: main.rs
tools/gen-sdf/: Cargo.toml
tools/gen-sdf/src/: main.rs
tools/run-agent/: Cargo.toml
tools/run-agent/src/: main.rs
userspace/sdk/: Cargo.toml
userspace/sdk/src/: agent_context.rs  capability.rs  context.rs  cuda.rs  event.rs  fs.rs  identity.rs  lib.rs  memory.rs  message.rs  net.rs  scheduler.rs  vector.rs
userspace/servers/http-gateway/: Cargo.toml
userspace/servers/http-gateway/src/: main.rs
userspace/servers/model-proxy/: Cargo.toml
userspace/servers/model-proxy/src/: lib.rs
userspace/servers/vibe-engine/: Cargo.toml
userspace/servers/vibe-engine/src/: lib.rs  wasm_validator.rs
userspace/sim/: Cargo.toml
userspace/sim/src/: caps.rs  eventbus.rs  lib.rs  microkit.rs  orchestrator.rs  runner.rs
userspace/sim/tests/: integration.rs
xtask/: Cargo.toml
xtask/src/: cmd_audit_caps.rs  cmd_ci_matrix.rs  cmd_fault_inject.rs  cmd_fetch_guest.rs  cmd_gen_image.rs  cmd_gen_pd_bundle.rs  cmd_host_test.rs  cmd_release.rs  cmd_setup.rs  cmd_test.rs  cmd_test_api.rs  lib.rs  main.rs
xtask/test-data/: minimal.toml
xtask/tests/: integration.rs
(+503 files in other folders)
