[workspace]
resolver = "2"
members = [
    # Kernel-side Rust PD runtime library
    "libs/rust-pd",
    # Userspace SDK + agents
    "userspace/sdk",
    "userspace/agents/init-agent",
    # Userspace servers
    "userspace/servers/http-gateway",
    "userspace/servers/event-bus",
    "userspace/servers/capability-broker",
    "userspace/servers/model-proxy",
    "userspace/servers/tool-registry",
    "userspace/servers/vibe-engine",
    # WASM agent simulator
    "userspace/sim",
    # Build + codegen tools
    "tools/run-agent",
    "tools/gen-sdf",
    "tools/gen-ringbuf",
    "tools/sign-wasm",
    "tools/attest-verify",
    "tools/make-swap-image",
    "tools/trace-replay",
    # Console
    "console/pd-slots",
    "console/agentos-console",
    # WASM dashboard (build with --target wasm32-unknown-unknown -p dashboard)
    "console/dashboard",
    # Workspace task runner
    "xtask",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/agentOS/agentos"

# agentos-pd is no_std + staticlib; needs abort panic in all profiles.
# abort is safe for all other workspace members too (no unwinding in kernel code).
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[workspace.dependencies]
serde       = { version = "1",      features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1",      features = ["full"] }
clap        = { version = "4",      features = ["derive"] }
anyhow      = "1"
thiserror   = "1"
