[package]
name = "xtask"
version = "0.1.3"
edition = "2021"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lib]
name = "xtask"
path = "src/lib.rs"

[dependencies]
clap       = { version = "4", features = ["derive", "env"] }
anyhow     = "1"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
reqwest    = { version = "0.11", features = ["blocking"] }
indicatif  = "0.17"
tempfile   = "3"
