[package]
name = "agentos-console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agentos-console"
path = "src/main.rs"

[dependencies]
pd-slots     = { path = "../pd-slots" }
agentos-sim  = { path = "../../userspace/sim" }
axum         = { version = "0.7", features = ["ws"] }
tokio        = { version = "1", features = ["full"] }
tokio-util   = { version = "0.7" }
tower-http   = { version = "0.5", features = ["fs", "cors"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
futures      = "0.3"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow       = "1"
