[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos                   = { version = "0.6", features = ["csr"] }
wasm-bindgen             = "0.2"
web-sys                  = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", "Node",
    "WebSocket", "MessageEvent", "CloseEvent", "ErrorEvent",
    "console", "Location", "Performance",
    "SvgsvgElement", "SvgElement", "SvgRectElement", "SvgTextElement",
    "EventTarget", "MouseEvent",
] }
js-sys                   = "0.3"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
gloo-timers              = { version = "0.3", features = ["futures"] }
gloo-net                 = { version = "0.5", features = ["websocket"] }
futures                  = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-futures     = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"
