[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentos-sdk"
version = "0.1.0"
description = "Python SDK for agentOS — seL4 microkernel agent operating system"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "agentOS contributors" }]
keywords = ["agentOS", "seL4", "microkernel", "LLM", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Operating System",
]

# Core: pure asyncio, zero hard deps beyond stdlib
dependencies = []

[project.optional-dependencies]
# HTTP shim sidecar
shim = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
]
# LangChain integration
langchain = [
    "langchain>=0.2",
    "langchain-core>=0.2",
]
# LlamaIndex integration
llamaindex = [
    "llama-index-core>=0.10",
]
# Development / testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "agentos-sdk[shim]",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Everything
all = [
    "agentos-sdk[shim,langchain,llamaindex,dev]",
]

[project.scripts]
agentos-shim = "agentos_sdk.shim:main"

[project.urls]
Homepage = "https://github.com/agentOS/agentOS"
Repository = "https://github.com/agentOS/agentOS"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentos_sdk*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
