[package]
name = "attest-verify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "attest-verify"
path = "src/main.rs"

[dependencies]
clap    = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["std"] }
anyhow  = "1"
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono  = { version = "0.4", features = ["serde"] }
