[package]
name = "agentos-http-gateway"
version = "0.1.0"
edition = "2021"
description = "HTTP Gateway — hyper-based HTTP/1.1 server that dispatches requests to agentOS apps via http_svc"

[dependencies]
agentos-sdk = { path = "../../sdk" }
tokio        = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
hyper        = { version = "1", features = ["http1", "server", "client"] }
hyper-util   = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes        = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell    = "1"
uuid         = { version = "1", features = ["v4"] }

[features]
default = []

[[bin]]
name = "http-gateway"
path = "src/main.rs"
