[package]
name = "agentos-model-proxy"
version = "0.1.0"
edition = "2021"
description = "Model Proxy - capability-gated LLM inference service for agentOS"

[features]
std = [
    "dep:reqwest",
    "dep:serde",
    "dep:serde_json",
    "dep:tokio",
]

[dependencies]
agentos-sdk = { path = "../../sdk" }
sha2 = { version = "0.10", default-features = false }

# Optional — only needed when the std HTTP backend is compiled in
reqwest    = { version = "0.11", features = ["json"], optional = true }
serde      = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio      = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
